--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,7 @@
-{
-    "rewrites": [
-      { "source": "/proxy/:match/:url*", "destination": "https://:match/:url*" },
-      { "source": "/proxy/:match/:url*/", "destination": "https://:match/:url*/" },
-    ],
-    "regions": [
-      "arn1",
-      "bom1",
-      "cdg1",
-      "cle1",
-      "cpt1",
-      "dub1",
-      "fra1",
-      "gru1",
-      "hnd1",
-      "iad1",
-      "icn1",
-      "kix1",
-      "lhr1",
-      "pdx1",
-      "sfo1",
-      "sin1"
-    ]
-  }
+{  
+  "rewrites": [  
+    { "source": "/test", "destination": "/api/test" },  
+    { "source": "/about", "destination": "/pages/about.html" }  
+  ],  
+  "regions": ["sin1"]  
+}  
