--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,32 @@
     {
       "source": "/test/:match/:url*/",
       "destination": "https://:match/:url*/"
+    },
+    {
+      "source": "/httptest/:match/:url*",
+      "destination": "http://:match/:url*"
+    },
+    {
+      "source": "/httptest/:match/:url*/",
+      "destination": "http://:match/:url*/"
     }
   ],
   "regions": [
+    "arn1",
+    "bom1",
+    "cdg1",
+    "cle1",
+    "cpt1",
+    "dub1",
+    "fra1",
+    "gru1",
+    "hnd1",
+    "iad1",
+    "icn1",
+    "kix1",
+    "lhr1",
+    "pdx1",
+    "sfo1",
     "sin1"
   ]
 }
